--- a/locale/ru/LC_MESSAGES/django.po
+++ b/locale/ru/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-15 20:16+0000\n"
+"POT-Creation-Date: 2020-10-20 18:56+0000\n"
 "PO-Revision-Date: 2019-05-13 20:14+0000\n"
 "Last-Translator: Hudson Brendon <hudson.brendon@ilhasoft.com.br>, 2020\n"
 "Language-Team: Russian (https://www.transifex.com/rapidpro/teams/226/ru/)\n"
@@ -2641,6 +2641,21 @@ msgstr "Идентификатор Freshchat"
 msgid "VK identifier"
 msgstr "Идентификатор VK"
 
+msgid "Text"
+msgstr "Текст"
+
+msgid "Date & Time"
+msgstr "Дата и Время"
+
+msgid "State"
+msgstr "Штат"
+
+msgid "District"
+msgstr "Район"
+
+msgid "Ward"
+msgstr "Административный округ"
+
 msgid "Label"
 msgstr "Метка"
 
@@ -4841,21 +4856,6 @@ msgstr ", "
 msgid "An error occurred while making your changes. Please try again."
 msgstr "При обновлении Вашего контакта произошла ошибка. Пожалуйста, попробуйте позже."
 
-msgid "Text"
-msgstr "Текст"
-
-msgid "Date & Time"
-msgstr "Дата и Время"
-
-msgid "State"
-msgstr "Штат"
-
-msgid "District"
-msgstr "Район"
-
-msgid "Ward"
-msgstr "Административный округ"
-
 msgid "HTTP Logs"
 msgstr "Журналы HTTP"
 
@@ -4865,6 +4865,12 @@ msgstr "Нет данных"
 #, python-format
 msgid "API v1 has been replaced by <a href=\"%(v2_url)s\">API v2</a>. Please migrate your applications accordingly."
 msgstr "API v1 была заменена на <a href=\"%(v2_url)s\">API v2</a>. Пожалуйста, перенесите Ваши приложения соответственно."
+
+msgid "Explorer"
+msgstr ""
+
+msgid "Log in to get your API Token"
+msgstr ""
 
 msgid "Query String Parameters"
 msgstr "Параметры Строки Запроса"
@@ -4880,6 +4886,9 @@ msgstr "Тело Post"
 
 msgid "View Full Documentation"
 msgstr "Просмотреть документацию полностью"
+
+msgid "Log in to use the Explorer"
+msgstr ""
 
 #, fuzzy
 #| msgid "Webhook Log"
