--- a/locale/en_US/LC_MESSAGES/django.po
+++ b/locale/en_US/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-20 18:56+0000\n"
+"POT-Creation-Date: 2020-10-20 20:34+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -2371,13 +2371,7 @@ msgstr ""
 msgid "Label"
 msgstr ""
 
-msgid "Key"
-msgstr ""
-
-msgid "Shown in Tables"
-msgstr ""
-
-msgid "Featured field"
+msgid "Field Type"
 msgstr ""
 
 msgid "The name of this contact"
@@ -2387,9 +2381,6 @@ msgid "Language"
 msgstr ""
 
 msgid "The preferred language for this contact"
-msgstr ""
-
-msgid "Any authentication information needed by this URN"
 msgstr ""
 
 msgid "Initializing"
@@ -2404,19 +2395,10 @@ msgstr ""
 msgid "The name of this contact group"
 msgstr ""
 
-msgid "What type of group it is, either user defined or one of our system groups"
-msgstr ""
-
-msgid "Contacts"
-msgstr ""
-
-msgid "The organization this group is part of"
+msgid "Query"
 msgstr ""
 
 msgid "The membership query for this group"
-msgstr ""
-
-msgid "Query Fields"
 msgstr ""
 
 msgid "The unique group to export"
@@ -2619,6 +2601,9 @@ msgid "Activate"
 msgstr ""
 
 msgid "Block"
+msgstr ""
+
+msgid "Contacts"
 msgstr ""
 
 msgid "Save as Group"
@@ -3112,6 +3097,9 @@ msgid "Name already used"
 msgstr ""
 
 msgid "Flow Start Log"
+msgstr ""
+
+msgid "Key"
 msgstr ""
 
 #, python-format
