--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-20 18:56+0000\n"
+"POT-Creation-Date: 2020-10-21 20:01+0000\n"
 "PO-Revision-Date: 2014-09-24 19:56+0000\n"
 "Last-Translator: TextIt <info@textit.in>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/textit/language/es/)\n"
@@ -1484,6 +1484,21 @@ msgstr "El token secreto que este transmisor deberá usar cuando firme los pedid
 #, fuzzy
 msgid "The URL we will POST to when sending messages, with variable substitutions"
 msgstr "El URL TextIt colocará un AVISO cuando se envíen mensajes, con reemplazos en las variables"
+
+#, fuzzy
+#| msgid "Receive URL"
+msgid "Receive"
+msgstr "Recibir URL"
+
+#, fuzzy
+#| msgid "Send URL"
+msgid "Send"
+msgstr "Enviar URL"
+
+#, fuzzy
+#| msgid "Channel"
+msgid "Channel Role"
+msgstr "Transmisor"
 
 msgid ""
 "Add a <a href=\"http://facebook.com\">Facebook</a> bot to send and receive messages on behalf\n"
