--- a/locale/pt_BR/LC_MESSAGES/django.po
+++ b/locale/pt_BR/LC_MESSAGES/django.po
@@ -12,7 +12,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-20 18:56+0000\n"
+"POT-Creation-Date: 2020-10-21 20:01+0000\n"
 "PO-Revision-Date: 2014-04-14 20:37+0000\n"
 "Last-Translator: produtos <produtos.ti@takenet.com.br>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/projects/p/textit/language/pt_BR/)\n"
@@ -1395,6 +1395,21 @@ msgstr "O token secreto que este transmissor deve usar ao assinar os pedidos."
 #, fuzzy
 msgid "The URL we will POST to when sending messages, with variable substitutions"
 msgstr "A URL que o Textit irá postar quando enviar mensagens"
+
+#, fuzzy
+#| msgid "Receive URL"
+msgid "Receive"
+msgstr "URL de recebimento"
+
+#, fuzzy
+#| msgid "Send URL"
+msgid "Send"
+msgstr "Enviar URL"
+
+#, fuzzy
+#| msgid "Channel"
+msgid "Channel Role"
+msgstr "Transmissor"
 
 msgid ""
 "Add a <a href=\"http://facebook.com\">Facebook</a> bot to send and receive messages on behalf\n"
