--- a/locale/es/LC_MESSAGES/django.po
+++ b/locale/es/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: TextIt\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-20 20:34+0000\n"
+"POT-Creation-Date: 2020-10-22 14:36+0000\n"
 "PO-Revision-Date: 2014-09-24 19:56+0000\n"
 "Last-Translator: TextIt <info@textit.in>\n"
 "Language-Team: Spanish (http://www.transifex.com/projects/p/textit/language/es/)\n"
@@ -8705,6 +8705,11 @@ msgstr ""
 
 msgid "Details"
 msgstr ""
+
+#, fuzzy
+#| msgid "Last Seen"
+msgid "Last Seen On"
+msgstr "Visualizado por última vez"
 
 #, fuzzy
 #| msgid "Contacts %d"
