--- a/locale/en_US/LC_MESSAGES/django.po
+++ b/locale/en_US/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2020-10-23 15:18+0000\n"
+"POT-Creation-Date: 2020-10-23 20:10+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -934,6 +934,25 @@ msgid ""
 "                This endpoint should be called by Dart Media when a message has been to the final recipient. (delivery reports)\n"
 "                You can set the delivery callback URL on your Dart Media account by contacting your sales agent.\n"
 "                "
+msgstr ""
+
+msgid "Activate your own enterprise WhatsApp account in Dialog 360 to communicate with your contacts. <a href=\"https://www.360dialog.com/\">Learn more about 360Dialog WhatsApp</a>"
+msgstr ""
+
+#, python-format
+msgid "Unable to register callbacks: %s"
+msgstr ""
+
+msgid "Your enterprise WhatsApp number"
+msgstr ""
+
+msgid "The base URL for your 360 Dialog WhatsApp enterprise installation"
+msgstr ""
+
+msgid "The 360 Dialog API key generated after account registration"
+msgstr ""
+
+msgid "Please enter a valid phone number"
 msgstr ""
 
 msgid ""
@@ -1996,10 +2015,6 @@ msgid "If you have an enterprise WhatsApp account, you can connect it to communi
 msgstr ""
 
 #, python-format
-msgid "Unable to register callbacks: %s"
-msgstr ""
-
-#, python-format
 msgid "Unable to configure channel: %s"
 msgstr ""
 
@@ -2007,9 +2022,6 @@ msgid "Contacts refresh begun, it may take a few minutes to complete."
 msgstr ""
 
 msgid "Sync Logs"
-msgstr ""
-
-msgid "Your enterprise WhatsApp number"
 msgstr ""
 
 msgid "The base URL for your WhatsApp enterprise installation"
@@ -2034,9 +2046,6 @@ msgid "The Facebook access token that will be used for syncing"
 msgstr ""
 
 msgid "The namespace for your WhatsApp templates"
-msgstr ""
-
-msgid "Please enter a valid phone number"
 msgstr ""
 
 msgid "Unable to check WhatsApp enterprise account, please check username and password"
@@ -4996,6 +5005,12 @@ msgstr ""
 
 #, python-format
 msgid "After connecting your service we will provide URLs for the endpoints for Clickatell to call when they want to push a message to %(brand)s."
+msgstr ""
+
+msgid ""
+"\n"
+"    Your 360Dialog WhatsApp channel is now connected, you should be able to send and receive messages as normal.\n"
+"  "
 msgstr ""
 
 #, python-format
